<resources>
    <string name="app_name">ORGO</string>
    <string name="enter_password">Password</string>
    <string name="enter_passwordagain">Confirm Password</string>
    <string name="enter_name">Username</string>
    <string name="enter_phone">Phone Number</string>
    <string name="submit">SUBMIT</string>
    <string name="don_t_have_account">DON\'T HAVE ACCOUNT?</string>
    <string name="sign_up"> <u>Sign up</u></string>
    <string name="enter_your_mail">Mail</string>
    <string name="openlogin">openloginpage</string>
    <string name="login_png">loginpng</string>
    <string name="liver_png">liver png</string>
    <string name="heart_png">heart png</string>
    <string name="logo_png">logo png</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT!</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="liverpng">liverandkidneyimg</string>
    <string name="heart">heartandeyeimg</string>
    <string name="loginpng">"login png "</string>
    <string name="logopng">logo png</string>
    <string name="username">Username</string>
    <string name="textforgotpwd">You will get otp on your registered mobile number!</string>
    <string name="userforgotpwd">Registered Username</string>
    <string name="userpassword">Password</string>
    <string name="submitbtn">SUBMIT</string>
    <string name="forgotpwd">ForgotPasswordPNG</string>
    <string name="hintotp">Please enter the OTP sent to you.</string>
    <string name="didnt">Didn\'t receive OTP?</string>
    <string name="resend"><u>RESEND OTP</u></string>
    <string name="give_feedback_here">Give Feedback here!</string>
    <string name="mailaddress">Mail ID</string>
    <string name="headdingfeed">We would like your feedback to improve our app.</string>
    <string name="process">Process</string>
    <string name="notsub">Not Submitted Any Form.</string>
    <string name="medical"><u>Medical Checkup Info.</u></string>
    <string name="donorconfirm">Donor Card Will be sent to your Address. </string>
    <string name="heading_myfa">Myths and Facts About Organ Donation</string>
    <string name="myth1">Myth No.1 : Anyone can become an organ donor.</string>
    <string name="fact1">Certain medical conditions automatically disqualify one from donating organs. The decision to use an organ is based on strict medical criteria. At the time of death, only medical professionals can determine whether a prospect’s organs are suitable for transplantation. Some diseases rule out donation including active cancer, HIV, Hepatitis or  any active infection</string>
    <string name="myth2">Myth No.2 : Organ donation is not necessary in India</string>
    <string name="fact2">Unofficial statistics indicate that there are nearly 300 deaths every day due to organ failure. That is more than one lakh deaths per year.  As per records, out of the 9.5 million deaths in India annually, at least 1 lakh are believed to be potential donors; however less than 200 actually become donors. As these figures suggest, India needs organ donors.</string>
    <string name="myth3">Myth No.3 : An organ recipient cannot be a donor.</string>
    <string name="fact3">Due to the administration of immunosuppressive drugs, tissue donation can be a problem. Otherwise, the medical team can only determine whether a healthy organ can be retrieved.</string>
    <string name="myth4">Myth No.4 : Organ/tissue removal will affect cremation/burial arrangements.</string>
    <string name="fact4">The removal of organs or tissues will not interfere with customary funeral or burial arrangements. The appearance of the body is not altered.  A super specialized surgical transplant team removes the organs and tissues which can be transplanted in other patients.</string>
    <string name="myth5">Myth No.5 : It is enough just to have a donor card</string>
    <string name="fact5"> No. You have to carry it at all times and also inform your relatives about your wish to donate your organs so that they give consent for donation when the circumstance arises. Becoming an organ donor takes less than 2 minutes.</string>
    <string name="myth6">Myth No.6 : Only the wealthy can afford an organ transplant</string>
    <string name="fact6">Factors such as blood group matching, the length of time being on the waiting list and severity of the disease play a role in classifying high priority and low priority cases.</string>
    <string name="myth7">Myth No.7 : Organ and tissue donation causes disfiguration.</string>
    <string name="fact7">Organ donation does not disfigure the body. Like any other surgery, surgical incisions are not visible as such.</string>
    <string name="myth8">Myth No.8 : You have to be related to the recipient</string>
    <string name="fact8">For qualifying to become a  living donor, you will undergo an extensive transplant evaluation to assess your health. A person with type O blood can donate organs to anyone, as they are “universal donors.” Also, you need not necessarily be from the same racial or ethnic group to donate an organ.</string>
    <string name="myth9">Myth No.9 : Organ donation can severely impact your health</string>
    <string name="fact9">Recovery periods vary, but within three months, most donors will return to their pre-donation health. For instance,  after donating a portion of your liver, cells in the remaining lobe regenerate or grow back to the original size. After a kidney donation, one kidney can still effectively remove waste from the body.</string>
    <string name="myth10">Myth No.10 : Living organ donation is unsafe</string>
    <string name="fact10">Donors generally spend 2-7 days in recovery before being discharged from the hospital. Death resulting from organ donation is very rare.</string>
    <string name="heading_about">About ORGO</string>
    <string name="first_para">ORGO is a Not-For-Profit, registered Non-Government Charity Organisation in India that works in the field of deceased organ donation and Transplantation.</string>
    <string name="second_para">Developers :\n </string>
    <string name="Haism">Hasim S</string>
    <string name="Jaydeep">Jaydeep J</string>
    <string name="Aamir">Aamir S</string>
    <string name="user_name">username</string>
    <string name="update">UPDATE DETAILS</string>
    <string name="donatebtn">Donate Organ</string>
    <string name="donatebodybtn">Donate Body</string>
    <string name="knowbtn">Organ Donation</string>
    <string name="awerbtn">Donation Awareness</string>
    <string name="transbtn">Organ Transplant</string>
    <string name="lawbtn">Law on Transplant</string>
    <string name="govbtn">Organization</string>
    <string name="helpbtn">Helpline - 24/7</string>
    <string name="donateorgan">donate_organ_png</string>
    <string name="donateorganpng">Donate Organ</string>
    <string name="donatebodypng">Donate Body</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="mythandfact">Myths and Facts</string>
    <string name="aboutus">About ORGO</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="slogan"><i>Let\'s share our life with others.</i></string>
    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <string name="logo">orgo logo png</string>
    <string name="optionchoose">Do you want to Register for Donate Organ?</string>
    <string name="dbbtn">Donate Body Direction</string>
    <string name="option">Do you want to Register for Donate Body?</string>
    <string name="yesbtn">YES</string>
    <string name="nobtn">NO</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="donor">Donor is :</string>
    <string name="direction"> Contact Details For Medical Process</string>
    <string name="did">Donor ID Number</string>
    <string name="dname">Donor Full Name</string>
    <string name="daddress">Donor Address</string>
    <string name="dphone">Donor Phone Number</string>
    <string name="dmail">Donor Mail-Address</string>
    <string name="dgender">Donor Gender : </string>
    <string name="dmale">Male</string>
    <string name="dfemale">Female</string>
    <string name="dtrans">TransGender</string>
    <string name="dage">Donor Age : </string>
    <string name="daadhar">Donor Aadhar Number</string>
    <string name="donatetype">Donate : </string>
    <string-array name="dtype">
        <item>Select one</item>
        <item>Bone</item>
        <item>Body</item>
        <item>Bone marrow</item>
        <item>Corneas</item>
        <item>Heart</item>
        <item>Intestine</item>
        <item>Kidney</item>
        <item>Liver</item>
        <item>Lung</item>
        <item>Middle ear</item>
        <item>Pancreas</item>
        <item>Skin</item>
    </string-array>
    <string name="name">Name : </string>
    <string name="address">Address : </string>
    <string name="phone">Phone No. : </string>
    <string name="email">Email : </string>
    <string name="pwd">Password : </string>
    <string name="conpwd">Con. Password : </string>
    <string name="website">Website : </string>
    <string name="contactperson">Contact Person</string>
    <string name="coming">Not Available</string>
    <string-array name="ins_name">
        <item>Andaman &amp; Nicobar Islands Institute of Medical Sciences</item>
        <item>Government Medical College - Anantapur</item>
        <item>SVIMS - Sri Padmavathi Medical College for women</item>
        <item>Konaseema Institute of Medical Sciences &amp; Research Foundation</item>
        <item>Guntur Medical College</item>
        <item>Katuri Medical College</item>
        <item>NRI Medical College</item>
        <item>Fathima Institute of Medical Sciences</item>
        <item>Rajiv Gandhi Institute of Medical Sciences</item>
        <item>Siddhartha Medical College</item>
        <item>Kurnool Medical College</item>
        <item>Viswabharathi Medical College &amp; General Hospital</item>
        <item>A. C. S. R. Government Medical College</item>
        <item>Narayana Medical College</item>


    </string-array>
    <string-array name="ins_address">
        <item>DHS Annexe Building Near Rear Gate, G.B.Pant Hospital, Atlanta Point, Port Blair 744104</item>
        <item>Gulzarpet, Anantapur, Andhra Pradesh 515001</item>
        <item>Alipiri Road, Tirupati, Chittoor Dsitrict, Andhra Pradesh 517501</item>
        <item>NH-216, Chaitanya Health City, Amalapuram, East Godavari District, Andhra Pradesh 533201</item>
        <item>Kannavari Thota Guntur Andhra Pradesh 522004</item>
        <item>Katuri Nagar, Kanna Vari Thota, Chinakondrupadu, Guntur, Andhra Pradesh 500019</item>
        <item>N.R.I Academy Of Sciences, Mangalagiri Road, Chinakakani - Guntur District, Andhra Pradesh 522503</item>
        <item>Ramarajupalli, Pulivendula Road, Kadapa, Andhra Pradesh 516003</item>
        <item>Rajiv Gandhi Institute of Medical Sciences, Puttampalli, Andhra Pradesh 516002</item>
        <item>Ring Road, Gunadala, Vijayawada, Andhra Pradesh 520008</item>
        <item>Bharath Petroleum, Near Bhudawarapet, Kisan Ghat Road, Kurnool, Andhra Pradesh 518002</item>
        <item>R.T. Nagar, Penchikalapadu, Kurnool, Andhra Pradesh 518467</item>
        <item>Nellore, Andhra Pradesh 524004</item>
        <item>Chinthareddypalem, S. P. S. R. Nellore, Andhra Pradesh</item>


    </string-array>
</resources>