<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_dashboard_scene"
    tools:context=".feed_back"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/Tool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Feedback"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Tool">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/headdingfeed"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/allerta_stencil"
                    android:hint="@string/username"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/mailadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/mailaddress"
                    android:importantForAutofill="no"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/feed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/give_feedback_here"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/submit"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/sidemenubar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/headerfile"
        app:menu="@menu/sidemenu" />
</androidx.drawerlayout.widget.DrawerLayout>